@@ -4,13 +4,15 @@ Hash: SHA256
 DIST Test-Class-0.37.tar.gz 77317 SHA256 a7f76cfdd851c893333497c2d8e5a8be4f72473dc3c46c2033e7812eee3d6b0b SHA512 981e74b74a31bfec02a0f97983cbd1820faa2a346f660d98ee54facd08081f70aa9dc240c259303322395a6e830d1dde0df1f11f67f5b9ad84c26507605bf5b7 WHIRLPOOL 368d01f54395a47ba63c57776b21eedb558ef51477ef865a8f7671cfbb913c304448a1ad00d2b4b9e61dc648f7c3f865e28017377607eff4fa654f57620cf2f2
 DIST Test-Class-0.38.tar.gz 78030 SHA256 05ab3c23095866b188805a491410949fc47fdebbe3d30bb9c8a5f8c284eb752f SHA512 dc2f0eda82eb3c04cbe2f84f7c7380f787e2ced12d6b14b6f5d6bc597f685a732c9fd8d4b2e7a679b53e9a1ebaa62d89eba0fc1f065baa281b9a17302dd5aa8e WHIRLPOOL 59036ed89206beaac67b4b8603428a6b8d0f57003f430141cb4a6e284aafa9149b1cd45dd6c13b73f70d8f2478a588de496e50202855ef161291800451258606
 EBUILD Test-Class-0.370.0.ebuild 648 SHA256 aef4da5cd2f76deabaa63b065e5ba7945c926aab2282897fec7b101113c992a0 SHA512 b389d63db3ba33e598eee119cd34d42d340a66487cc94379bba0b7b631707991a26ce08f598817adcdc56f213caecf95648931c5ba96684dc09bba049d72952c WHIRLPOOL add18a78c557be7cdc7320f10c64104fa31cb5a225c1f2473f6ed7c4f974c5e90c6b916fda88ee40792813ffdbc4f7dd7c167366991988bb344b22180abb0d65
-EBUILD Test-Class-0.380.0.ebuild 650 SHA256 06b443bc5c66179cc60dbd5680364526a1632a174a409cd29e9a3cc373d8241c SHA512 c0db268e95b6661bec197ab6fb1413b868f77ede565c34845acede21a1d7b8ad97932b774d2b4438318d54f5af0a17b165b82012b014106dec16f54fbe9fc614 WHIRLPOOL d957eb9be2cbf500b8fb489b428fcfe4e87eb223be786d1aa5378a3dcb66cb62fe811488afa8f99735ced2f11be081944f2ee140c916448c0885b1961c1ac26f
-MISC ChangeLog 8202 SHA256 38a252a6b400ed48135db7570424ca2d1460947a6e1e49b0e0b540f7f6d7e779 SHA512 b885e5986bc2bf571f398243aab0b881a0059694fbb435546ebc742ed37a4648f1a6278eb36afc6f4c54dda91b6379f6384929b8f1e909d42249771ef19b0f0d WHIRLPOOL 30f1f7415d5fab99d3842f3325ef2fae5203e1488ff1e25c50fdf7c13f34e5ae052dbde101b87ad3545fab1fba27b85c8b1ac1c8ee009174068afeaf759655b7
+EBUILD Test-Class-0.380.0.ebuild 651 SHA256 0111a2cae56383543887df14299cbe0f56b5a04bbdd18617efa506ed6be3c2b9 SHA512 104115162d0c397867de6ce3ff6329e82cdad285f7413de67c40ee1b43e3e1e0d19a0dc59321f9e2b986dd56242a53a1de1ce8636cedf9004eacbe41a951c388 WHIRLPOOL 578576bb9710576503bf82683b8017c7af30104c9a89d597ace63b2ea61409a3dbe3e402a54f4af394895129c45be219491d72f095ded44e2b503d10b1db5e00
+MISC ChangeLog 8318 SHA256 e938b1e89361f538849f60065b11dc346ab0e6cb1d2fa1eab0c38c8fa778a4b0 SHA512 1bb25d401c09fd629a019e2f60d3f66593e13d9151e432fbfd1e023886653f171838061c9993f09bca43459a0d6dd8db1cfa5a631a5588a71a2a699001acc2b4 WHIRLPOOL e63f11c34907759d89a4a23cebfdd2dd41b15a561bce98fa4552b3fcc8db2f75b72586b9a81414e7b65a2d36854d77794ad7c94782893af1330aca5623a0b9a2
 MISC metadata.xml 428 SHA256 e85de39d8b1b57d69158209dde5fb95a955d16e554d736135fd3b9db0ff8c81e SHA512 e4a307ebca1edd88cfe038f4103daedd00528724dc5efcea178b424fe1a89fe246653b9d07456dbe08dff732d35d44bf8dc523a50f496dcf1e58120103ed1d23 WHIRLPOOL e11b4fa03d2b7d09629f64b5d2bc5c2f4a91a4ea9bc3af3d0d6a0e3f8cbad459a7930a123430d0a9f571f7f63e83b265162dd46e634e3cc882c5f369ae7a1eb4
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.20 (GNU/Linux)
 
-iEYEAREIAAYFAlDpkWQACgkQV3J2n04EauwROgCgrH2lrMjh+H9yVpD6oBzSzft3
-fFcAniOY6JiAhY1DBDuRqE2oedSPaXhx
-=uGy8
+iJwEAQEIAAYFAlHI58UACgkQG9wOWsQutdaSoQP/UXZw6Gx7tCMM5G4t7WdjWSh5
+adnv3ufsPYYt4+RL1Tya4PppACc8jRNicyaNqZGqcLvzlYcGSSc1vRgaGIVR8EJc
+E80Tn1aYWsX6m5gfM7FfOLmprFm5fCgQ5uv553uvrLVbz5BkbVv5Zrqm3e+43tv0
+JsKPCGTdQ0UVeAIEFHE=
+=4xl8
 -----END PGP SIGNATURE-----
