@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Test-Class
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Test-Class/ChangeLog,v 1.67 2013/01/06 14:59:47 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Test-Class/ChangeLog,v 1.68 2013/06/25 00:22:54 zlogene Exp $
+
+  25 Jun 2013; Mikle Kolyada <zlogene@gentoo.org> Test-Class-0.380.0.ebuild:
+  amd64/x86 stable wrt bug #449618
 
   06 Jan 2013; Torsten Veller <tove@gentoo.org> -Test-Class-0.360.0.ebuild:
   Cleanup
